--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -25,6 +25,7 @@
                     <MenuItem Click="ClickConnect" Header="Switcher" Focusable="False" IsTabStop="False"></MenuItem>
                     <Separator></Separator>
                     <MenuItem Click="ClickConnectMock" Header="Mock Switcher" Focusable="False" IsTabStop="False"></MenuItem>
+                    <MenuItem Name="miConnectMockCameras" Click="ClickConnectMockCameras" Header="Mock Cameras" Focusable="False" IsTabStop="False" IsCheckable="True" IsChecked="False"></MenuItem>
                     <Separator></Separator>
                     <MenuItem Click="ClickDisconnectSwitcher" Header="Disconnect" Focusable="False" IsTabStop="False"></MenuItem>
                 </MenuItem>
