--- a/IntegratedPresenter/BMDSwitcher/Mock/MockMV_Simple_PIP.xaml
+++ b/IntegratedPresenter/BMDSwitcher/Mock/MockMV_Simple_PIP.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid>
             <Viewbox HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Grid Width="1920" Height="1080">
+                <Grid Name="displaySum" Width="1920" Height="1080">
                     <Rectangle Fill="Black"></Rectangle>
                     <Image Name="imagePlayerA"></Image>
                     <MediaElement Name="videoPlayerA"></MediaElement>
