--- a/IntegratedPresenter/BMDSwitcher/Mock/MockMV_PV_PIP.xaml
+++ b/IntegratedPresenter/BMDSwitcher/Mock/MockMV_PV_PIP.xaml
@@ -31,7 +31,7 @@
                 <Line X1="530" X2="912" Y1="513" Y2="513" StrokeThickness="5" Stroke="LightGray" Panel.ZIndex="0"></Line>
 
                 <Grid Margin="0,0,0,20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Panel.ZIndex="1000">
-                    <Border Background="Gray" Opacity="0.3" BorderThickness="2" BorderBrush="#f0ffffff" CornerRadius="4"></Border>
+                    <Border Background="#303030" Opacity="0.8" BorderThickness="2" BorderBrush="#f0ffffff" CornerRadius="4"></Border>
                     <TextBlock FontSize="20" Name="tbPIPName" Foreground="White" Opacity="1" Padding="10,5,10,5">PREVIEW</TextBlock>
                 </Grid>
             </Grid>
