--- a/IntegratedPresenter/BMDSwitcher/Mock/MockMV_Simple_PIP.xaml
+++ b/IntegratedPresenter/BMDSwitcher/Mock/MockMV_Simple_PIP.xaml
@@ -9,16 +9,18 @@
     <Grid>
         <Grid>
             <Viewbox HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Grid Name="displaySum" Width="1920" Height="1080">
+                <Grid>
                     <Rectangle Fill="Black"></Rectangle>
-                    <Image Name="imagePlayerA"></Image>
-                    <MediaElement Name="videoPlayerA"></MediaElement>
+                    <Grid Name="displaySum" Width="1920" Height="1080">
+                        <Image Name="imagePlayerA"></Image>
+                        <MediaElement Name="videoPlayerA"></MediaElement>
+                    </Grid>
                 </Grid>
             </Viewbox>
-            <Border BorderBrush="LightGray" BorderThickness="5">
+            <Border Name="bdr" BorderBrush="LightGray" BorderThickness="5">
             </Border>
             <Grid Margin="0,0,0,20" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-                <Border Background="Gray" Opacity="0.3" BorderThickness="2" BorderBrush="#f0ffffff" CornerRadius="4"></Border>
+                <Border Background="#303030" Opacity="0.8" BorderThickness="2" BorderBrush="#f0ffffff" CornerRadius="4"></Border>
                 <TextBlock FontSize="20" Name="tbPIPName" Foreground="White" Opacity="1" Padding="10,5,10,5">PIP NAME</TextBlock>
             </Grid>
         </Grid>
