--- a/IntegratedPresenter/BMDSwitcher/Mock/BetterMock/MockMV_Simple_PIP.xaml
+++ b/IntegratedPresenter/BMDSwitcher/Mock/BetterMock/MockMV_Simple_PIP.xaml
@@ -11,9 +11,15 @@
             <Viewbox HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid>
                     <Rectangle Fill="Black" Panel.ZIndex="0"></Rectangle>
-                    <Grid Name="displaySum" Panel.ZIndex="1">
-                        <Image Name="bkgdNoise" Panel.ZIndex="0" Source="../Images/noise1.png" Opacity="0"></Image>
-                        <Grid Name="bkgdSrc" Width="1920" Height="1080" Panel.ZIndex="2" Opacity="1">
+                    <Grid Name="displaySum" Panel.ZIndex="1" ClipToBounds="True">
+                        <Image Name="bkgdNoise" Panel.ZIndex="2" Source="../Images/noise2.png" Opacity="0"></Image>
+                        <Grid Name="bkgdSrc" Width="1920" Height="1080" Panel.ZIndex="1" Opacity="1">
+                            <Grid.RenderTransform>
+                                <ScaleTransform x:Name="bkgdSrcZoomScale" ScaleX="1" ScaleY="1"></ScaleTransform>
+                            </Grid.RenderTransform>
+                            <Grid.RenderTransformOrigin>
+                                <Point X="0.5" Y="0.5"></Point>
+                            </Grid.RenderTransformOrigin>
                             <Image Name="imagePlayerA" Panel.ZIndex="1"></Image>
                             <MediaElement Name="videoPlayerA" Panel.ZIndex="1"></MediaElement>
                         </Grid>
